# testtr

./: .gitignore  Cargo.toml  README.md
apps/console/: Cargo.toml
apps/console/src/: main.rs
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: action-cards.tsx  empty-state.tsx  header.tsx  log-panel.tsx  mockup-cards.tsx  pipeline-steps.tsx  run-list.tsx  sidebar.tsx  status-badge.tsx
apps/web/lib/: api.ts  types.ts
apps/web/lib/hooks/: use-history.ts  use-run.ts  use-sse.ts
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
docs/: 00-overview.md  01-architecture.md  02-execution-flow.md  03-implementation-plan.md  04-local-setup.md  05-run-and-keys.md  06-stitch-mcp-integration.md
infra/compose/: docker-compose.yml
scripts/: e2e-smoke.sh  run-local.sh
services/mcp-gateway/: Cargo.toml  Dockerfile
services/mcp-gateway/src/: main.rs
services/orchestrator/: Cargo.toml  Dockerfile
services/orchestrator/migrations/: 0001_init.sql  0002_connections_and_steps.sql  0003_oauth_and_encryption.sql  0004_connection_rotation_and_revoke.sql  0005_allow_null_encrypted_access_token_on_revoke.sql  0006_audit_logs.sql
services/orchestrator/src/: main.rs
workers/ci/: Cargo.toml  Dockerfile
workers/ci/src/: main.rs
workers/codegen/: Cargo.toml  Dockerfile
workers/codegen/src/: main.rs
workers/deploy/: Cargo.toml  Dockerfile
workers/deploy/src/: main.rs
workers/design/: Cargo.toml  Dockerfile
workers/design/src/: main.rs
workers/spec/: Cargo.toml  Dockerfile
workers/spec/src/: main.rs
workers/stitch/: Cargo.toml
workers/stitch/src/: main.rs
