[package]
name = "console"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
slint = "1.8"
