[package]
name = "orchestrator"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
dotenvy.workspace = true
futures-util.workspace = true
queue = { path = "../../crates/queue" }
rand.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
