[package]
name = "design-worker"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
dotenvy.workspace = true
queue = { path = "../../crates/queue" }
redis.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
